# fhir-validator-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  kill-gate.md  landing-copy.md  pyproject.toml
.github/workflows/: test.yml
src/fhir_validator_cli/: __init__.py  cli.py  igs.py  validator.py
src/fhir_validator_cli/data/: ig-manifest.json
tests/: test_validator.py
