[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fhir-validator-cli"
version = "0.1.0"
description = "Zero-config FHIR R4/R5 validator with bundled EU Implementation Guide packs (HL7 Europe Base, IPS, mCSD, EHDS-skeleton)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "plusUltra operator" }]
keywords = ["fhir", "hl7", "validator", "ehds", "ips", "healthcare", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "jsonschema>=4.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "build", "twine"]

[project.urls]
Homepage = "https://github.com/plusultra/fhir-validator-cli"
Issues = "https://github.com/plusultra/fhir-validator-cli/issues"

[project.scripts]
fhirv = "fhir_validator_cli.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fhir_validator_cli = ["data/*.json"]
